Better mediumoptions UI interaction and link identifier no longer wraps

--- a/src/styles.css
+++ b/src/styles.css
@@ -463,6 +463,7 @@ body {
 .link-marker {
     margin-top: -1px;
     font-size: 12px;
+    text-wrap: nowrap;
 }
 
 /* Hide background of link specifier */
